--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
   "name": "api-api/transporter-requests",
   "description": "Transporter implementation for the Requests library.",
   "version": "1.0.0",
-  "license": "GPL-3.0",
+  "license": "GPL-2.0-or-later",
   "keywords": [
     "api-api",
     "transporter",
